--- a/styles/style.css
+++ b/styles/style.css
@@ -1,27 +1,3 @@
-/* body {
-  font-family: sans-serif;
-  margin: auto;
-  max-width: 1280px;
-}
-
-.navbar {
-  background-color: #313236;
-  border-radius: 2px;
-  max-width: 800px;
-}
-
-.navbar a {
-  color: #aaa;
-  display: inline-block;
-  font-size: 15px;
-  padding: 10px;
-  text-decoration: none;
-}
-
-.navbar a:hover {
-  color: #ffffff;
-} */
-
 body {
     margin: 0;
     padding: 0;
@@ -59,13 +35,14 @@ body {
   
   h1 {
     margin: 0;
-  
+    font-size: 16pt;
     font-weight: normal;
     letter-spacing: -1px;
   }
   
   p {
     margin: 20px 0;
+    font-size: 9pt;
   }
   
   a:link,
@@ -77,4 +54,3 @@ body {
   a:hover {
     text-decoration: none;
   }
-  
